[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.isort]
multi_line_output = 3
profile = "black"

[tool.poetry]
authors = ["Peter Pölzl <33464174+ppoelzl@users.noreply.github.com>"]
description = "API for Path Of Building's build sharing format."
license = "MIT"
name = "pobapi"
version = "0.6.0"

[tool.poetry.dependencies]
dataslots = "^1.0.2"
lxml = "^4.6.2"
python = ">=3.7,<4.0"
requests = "^2.25.1"
sphinx = {version = ">=3.4.2,<5.0.0", optional = true}
sphinx-autodoc-typehints = {version = "^1.11.1", optional = true}
unstdlib = "^1.7.2"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
isort = "^5.9.3"
pytest = "^6.2.5"
sphinx = ">=3.4.2,<5.0.0"
sphinx-autodoc-typehints = "^1.11.1"
toml-sort = "^0.19.0"

[tool.poetry.extras]
docs = ["sphinx", "sphinx-autodoc-typehints"]
